<resources>
    <string name="app_name">JavaFullCourse</string>
    <string name="userInput">User Input</string>
    <string name="nameShort">Please enter more than 2 characters.</string>
    <string name="nameInt">Please enter letters only.</string>
    <string name="nameConfirm">Hello there\u0020</string>
    <string name="userInputScreen">User Input Screen</string>
    <string name="enterName">Enter your name</string>
    <string name="confirmName">Confirm</string>
    <string name="additionToast">Addition</string>
    <string name="subtractionToast">Subtraction</string>
    <string name="multiplicationToast">Multiplication</string>
    <string name="divisionToast">Division</string>
    <string name="modulationToast">Modulation</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="times">x</string>
    <string name="divided">/</string>
    <string name="mod">%</string>
    <string name="enterValue">Please enter a value</string>
    <string name="expressions">Expressions</string>
    <string name="expressionsScreen">Expressions Screen</string>
    <string name="enterVal">Enter a value</string>
    <string name="answer">Answer</string>
    <string name="answerTV">Answer</string>
    <string name="mathClass">Math Class</string>
    <string name="maxNum">Maximum number</string>
    <string name="minNum">Minimum number</string>
    <string name="rUpNum">Round UP number</string>
    <string name="rDownNum">Round DOWN number</string>
    <string name="absNum">Absolute number</string>
    <string name="sqRootNum">Square Root number</string>
    <string name="roundNum">Round number</string>
    <string name="hypoNum">Hypotenuse number</string>
    <string name="empty">Empty</string>
    <string name="mathClassScreen">Math Class Screen</string>
    <string name="maxStr">max</string>
    <string name="minStr">min</string>
    <string name="ceilStr">ceil</string>
    <string name="floorStr">floor</string>
    <string name="absStr">abs</string>
    <string name="sqrtStr">sqrt</string>
    <string name="resultStr">Result</string>
    <string name="hypoStr">hypotenuse</string>
    <string name="sideBstr">Enter side b</string>
    <string name="sideAstr">Enter side a</string>
    <string name="roundStr">round</string>
    <string name="rndmNum">Random number</string>
    <string name="rangeError">This field should be less than the second field.</string>
    <string name="rndmStr">RNDOM</string>

    <string-array name="operators">
        <item>+</item>
        <item>-</item>
        <item>x</item>
        <item>/</item>
        <item>%</item>
    </string-array>

</resources>